# RustVampire

./: .gitignore  README.md
VampireGroundFink/: .project  CODEME.md  Cargo.toml  README.md
VampireGroundFink/src/: main.rs
