[package]
name = "vampire_api"
version = "0.0.0"
authors = ["Sͬeͥbͭaͭsͤtͬian <bastie@users.noreply.github.com>"]
edition = "2018"
homepage = "https://bastie.github.io/PythonVampire/#"

description = "Just Another Vampire Api 4 Rust"
readme = "README.md"
repository = "https://github.com/bastie/RustVampire"
keywords = ["Java", "vampire", "library", "developer"]
license = "Apache-2.0"


#exclude = ["build/**/*.o", "doc/**/*.html"]
#include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vampire_api"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib).
crate-type = ["cdylib", "rlib", "staticlib"] # The crate types to generate. - can not in same build "dylib",


[dependencies]

[dev-dependencies]
