[package]
name = "vampire_api"
version = "0.0.0"
authors = ["Sͬeͥbͭaͭsͤtͬian <bastie@users.noreply.github.com>"]
edition = "2018"
homepage = "https://bastie.github.io/PythonVampire/#"

description = "Just Another Vampire Api 4 Rust"
readme = "README.md"
repository = "https://github.com/bastie/RustVampire"
keywords = ["Java", "vampire", "library", "developer"]
license = "Apache-2.0"


#exclude = ["build/**/*.o", "doc/**/*.html"]
#include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vampire_api"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib).
crate-type = ["cdylib", "rlib", "staticlib"] # The crate types to generate. - can not in same build "dylib",


[dependencies]
java-properties = "1.2.0"
java_random = "0.1.3"
dotproperties = "0.1.0"
java-utils = "0.1.0"
java-rand = "0.2.0"
file_scanner = "0.2.0"
flurry = "0.3.1"
atomic-array = "0.3.1"
atomic-ref2 = "0.2.1"
comparator = "0.2.1"
manual_future = "0.1.1"
rust_runnables = "0.2.0"
timsort = "0.1.2"
plain_enum = "0.9.9"
simple-string-builder = "0.2.0"
collections-more = "0.1.4"
lockfreehashmap = "0.1.2"
log4rs = "1.0.0-alpha-2"
steel-cent = "0.2.3"


[dev-dependencies]
